objects/ASI_eForm_Return_Order_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Branch_Code__c</fullName>
        <label>Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Customer_Code__c</fullName>
        <formula>ASI_eForm_Customer_Wholesaler__r.ASI_CRM_MY_CustomerCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Customer_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer(Wholesaler)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>KR Return Order, KR Return Order RO, KR Return Order Input</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wholesaler (KR)</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Return Order Requests</relationshipLabel>
        <relationshipName>Return_Order_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Grade__c</fullName>
        <formula>TEXT( ASI_eForm_Customer_Wholesaler__r.ASI_CRM_CN_Grade__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>R41 선물 세트 반품</fullName>
                </value>
                <value>
                    <fullName>R42 품질 이슈 - 소비자 클레임</fullName>
                </value>
                <value>
                    <fullName>R43 품질 이슈 - 제품 리콜</fullName>
                </value>
                <value>
                    <fullName>R44 RFID Tag 불량, 미부착 / 기타 상표 법규 관련 이슈테그 이슈 / 기타 상표 법규 관련 등</fullName>
                </value>
                <value>
                    <fullName>R45 주문 오류 (거래처 또는 회사의 주문처리 오류)</fullName>
                </value>
                <value>
                    <fullName>R46 제품 반품 및 교환 (거래선 이탈, 도매장 재고 불균형)</fullName>
                </value>
                <value>
                    <fullName>R47 제품 교환 (PRK 재고 부족으로 인한 도매장간 재고 이동)</fullName>
                </value>
                <value>
                    <fullName>R48 제품 교환 (각종 프로모션 : NPD, 7 packs, In-packs, DC PM, etc.)</fullName>
                </value>
                <value>
                    <fullName>R49 미결채권을 제품으로 회수</fullName>
                </value>
                <value>
                    <fullName>R50 구형 재고</fullName>
                </value>
                <value>
                    <fullName>R51 기타 (구체적으로 사유를 명시해주세요)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Request_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sales_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Admin</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>ASI KOR Sales Admin</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select Sales Admin users only.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Return_Order_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Street__c</fullName>
        <formula>ASI_eForm_Customer_Wholesaler__r.ASI_CRM_CN_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Return_Order_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sys_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Return_Order_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Total_amount__c</fullName>
        <label>Total amount</label>
        <summarizedField>ASI_eForm_Return_Order_Request_Line_Item__c.ASI_eForm_Amount_Return__c</summarizedField>
        <summaryForeignKey>ASI_eForm_Return_Order_Request_Line_Item__c.ASI_eForm_Return_Order_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Return Order Request</label>
    <listViews>
        <fullName>ASI_eForm_KR_Return_Order</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Branch_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_eForm_Request_Date__c</columns>
        <columns>ASI_eForm_Sales_Admin__c</columns>
        <columns>ASI_eForm_Total_amount__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Customer_Code__c</columns>
        <columns>ASI_eForm_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>KR Return Order</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Branch_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_eForm_Request_Date__c</columns>
        <columns>ASI_eForm_Sales_Admin__c</columns>
        <columns>ASI_eForm_Total_amount__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Customer_Code__c</columns>
        <columns>ASI_eForm_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RO-{000000}</displayFormat>
        <label>Return Order Request No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Order Requests</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_Return_Order</fullName>
        <active>true</active>
        <label>KR Return Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_KR_Return_Order_Input</fullName>
        <active>true</active>
        <label>KR Return Order Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_KR_Return_Order_RO</fullName>
        <active>true</active>
        <label>KR Return Order RO</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ASI_eForm_KR_Manual_Share__c</fullName>
        <label>ASI_eForm_KR_Manual_Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>ASI_eForm_KR_Remarks_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
CONTAINS( RecordType.DeveloperName , &quot;ASI_eForm_KR_Return_Order&quot;), 
OR( 
AND(TEXT(ASI_eForm_Reason__c) = &quot;R51 기타 (구체적으로 사유를 명시해주세요)&quot;, ISBLANK(ASI_eForm_Remarks__c) ), 
AND(TEXT(PRIORVALUE(ASI_eForm_Reason__c)) != TEXT(ASI_eForm_Reason__c), TEXT(ASI_eForm_Reason__c) = &quot;R51 기타 (구체적으로 사유를 명시해주세요)&quot;, ISBLANK(ASI_eForm_Remarks__c) ), 
AND(ISBLANK(ASI_eForm_Remarks__c), NOT(ISBLANK(PRIORVALUE(ASI_eForm_Remarks__c))), TEXT(ASI_eForm_Reason__c) = &quot;R51 기타 (구체적으로 사유를 명시해주세요)&quot; ) 
))</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Remarks__c</errorDisplayField>
        <errorMessage>Please enter remarks in case you choose &quot;R51 기타&quot; as a reason.</errorMessage>
    </validationRules>
</CustomObject>